fix: avatar not showing on iphone se

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@ article {
   }
 
   h2 {
-    @apply text-2xl font-bold my-2
+    @apply text-2xl md:text-3xl font-bold my-2
   }
 
   h3 {
